# universal-sierra-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  release-post.md
.github/workflows/: ci.yml  installation_script_check.yml  release.yml
scripts/: install.sh  package.sh
src/: lib.rs  main.rs
src/commands/: compile_contract.rs  compile_raw.rs  mod.rs
tests/: compilation.rs  e2e.rs  integration.rs
tests/data/: sierra_1_5_0.json  wrong_sierra.json
tests/data/raw_sierra/: 1_4_0_raw.json
tests/data/sierra_contract/: sierra_1_6_0.json  sierra_1_7_0.json  sierra_1_7_0_trace_hint.json
tests/data/sierra_raw/: sierra_1_4_0.json  sierra_1_5_0.json  sierra_1_6_0.json  sierra_1_7_0.json  sierra_1_7_0_trace_hint.json
tests/e2e/: compile_contract.rs  compile_raw.rs  mod.rs
tests/integration/: compile_contract.rs  compile_raw.rs  mod.rs
