[package]
name = "universal-sierra-compiler"
description = "Universal-Sierra-Compiler is the tool for Sierra compilation. It compiles any ever-existing Sierra version to CASM."
homepage = "https://github.com/software-mansion/universal-sierra-compiler"
readme = "README.md"
repository = "https://github.com/software-mansion/universal-sierra-compiler"
version = "2.6.0"
edition = "2021"
license = "MIT"


[dependencies]
cairo-lang-starknet-sierra-0_1_0 = { package = "cairo-lang-starknet", git = "https://github.com/starkware-libs/cairo.git", tag = "v1.0.0-alpha.6", version = "1.0.0-alpha.6" }
cairo-lang-starknet-sierra-1_0_0 = { package = "universal-sierra-compiler-cairo-lang-starknet-proxy", version = "=0.2.0" }
cairo-lang-sierra-to-casm = "2.12.3"
cairo-lang-sierra = "2.12.3"
cairo-lang-starknet-classes = "2.12.3"
serde_core = "1"
serde_json = "1"
clap = "4.5.51"
anyhow = "1.0.100"
console = "0.16.1"
tracing =  "0.1"
chrono = { version = "0.4", optional = true }
tracing-chrome = {version = "0.7", optional = true}
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[dev-dependencies]
snapbox = "0.6.23"
tempfile = "3.23.0"
indoc = "2.0.7"
fs_extra = "1.3.0"
test-case = "3.3.1"
num-bigint = "0.4.6"
cairo-lang-casm = { version = "2.12.3", features = ["serde"] }

[features]
tracing = ["dep:chrono", "dep:tracing-chrome", "dep:tracing-subscriber"]
